--- a/mybatis/src/main/resources/application.yml
+++ b/mybatis/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 mybatis:
-  type-aliases-package: com.xqy.www.mybatis.dao
-  mapper-locations: classpath*:mybatis/mapper/*.xml
+  type-aliases-package: com.xqy.www.domain
+  mapper-locations: classpath:/mapper/*.xml
   check-config-location: true
+
 #  mapper-locations=
 #  #
 #  mybatis.configuration.mapUnderscoreToCamelCase=true
@@ -9,8 +10,12 @@ mybatis:
 #  mybatis.configuration.useColumnLabel=true
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/sys?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/beauty?useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password:
+    password: 123456
+
+#mapper.plugin = tk.mybatis.mapper.generator.MapperPlugin
+#mapper.Mapper = tk.mybatis.mapper.common.Mapper
+
 
